--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "nodemon": "^1.19.1",
     "pg": "^7.12.0"
   }
 }
