--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
     "react": "^16.9.0",
