--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
