--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
     "react": "^16.9.0",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
