--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "d3": "^5.11.0",
+    "d3": "^3.5.17",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
@@ -34,6 +34,7 @@
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
     "react": "^16.9.0",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
