--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pg": "^7.12.0",
     "react": "^16.9.0",
     "react-d3-components": "^0.9.1",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-material-ui-form-validator": "^2.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
