--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "file-saver": "^2.0.2",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
     "react": "^16.9.0",
     "react-d3-components": "^0.9.1",
     "react-dom": "^16.9.0",
-    "react-material-ui-form-validator": "^2.0.9"
+    "react-material-ui-form-validator": "^2.0.9",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
