Fix server start

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
-    "server": "nodemon server/index.js",
+    "start": "nodemon server/server.js",
+    "server": "nodemon server/server.js",
     "react-dev": "webpack -d --watch",
     "test": "jest"
   },
